--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Gratuitos</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 e CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora cumque reiciendis, dicta excepturi quam maxime suscipit earum sit aspernatur eligendi accusamus necessitatibus, laborum quia explicabo qui odit nam nemo. Iusto.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem ex enim asperiores voluptates animi, nobis omnis perferendis, exercitationem beatae ipsa architecto praesentium doloribus. Porro, vitae unde! Cumque corporis non voluptatum!</p>
         </article>
     </main>
 </body>
