--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
     <main>
         <header>
             <h1>Cursos Gratuitos</h1>
+            <img src="" alt="Curso em Vídeo">
         </header>
         <article>
             <h2>Curso de HTML5 e CSS3</h2>
+            <img class="lado" src="" alt="Curso HTML">
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora cumque reiciendis, dicta excepturi quam maxime suscipit earum sit aspernatur eligendi accusamus necessitatibus, laborum quia explicabo qui odit nam nemo. Iusto.</p>
+            <p><a href="file:///C:/Users/Marco/Documents/MeusProjetos/projeto-site/index.html">Acesse o curso de HTML5</a></p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
+            <img class="lado" src="" alt="Curso JavaScript">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem ex enim asperiores voluptates animi, nobis omnis perferendis, exercitationem beatae ipsa architecto praesentium doloribus. Porro, vitae unde! Cumque corporis non voluptatum!</p>
+            <p><a href="file:///C:/Users/Marco/Documents/MeusProjetos/projeto-site/index.html">Acesse o curso de JavaScript</a></p>
         </article>
     </main>
 </body>
